Fix Horizontal Scrollbars

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ body {
 }
 
 * {
-    overflow-y: hidden;
+    overflow: hidden;
 }
 
 .progress {
